2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/strcompat-devel.preinst.in: debian script corrections

2006-12-08  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/aix/ddi.h: default to streamscall interface
	* src/include/sys/aix/strconf.h: default to streamscall interface
	* src/include/sys/aix/stream.h: default to streamscall interface
	* src/include/sys/hpux/ddi.h: default to streamscall interface
	* src/include/sys/hpux/strconf.h: default to streamscall interface
	* src/include/sys/hpux/stream.h: default to streamscall interface
	* src/include/sys/irix/ddi.h: default to streamscall interface
	* src/include/sys/irix/strconf.h: default to streamscall interface
	* src/include/sys/irix/stream.h: default to streamscall interface
	* src/include/sys/lfs/ddi.h: default to streamscall interface
	* src/include/sys/lfs/strconf.h: default to streamscall interface
	* src/include/sys/lfs/stream.h: default to streamscall interface
	* src/include/sys/lis/ddi.h: default to streamscall interface
	* src/include/sys/lis/strconf.h: default to streamscall interface
	* src/include/sys/lis/stream.h: default to streamscall interface
	* src/include/sys/mac/ddi.h: default to streamscall interface
	* src/include/sys/mac/strconf.h: default to streamscall interface
	* src/include/sys/mac/stream.h: default to streamscall interface
	* src/include/sys/mps/ddi.h: default to streamscall interface
	* src/include/sys/mps/strconf.h: default to streamscall interface
	* src/include/sys/mps/stream.h: default to streamscall interface
	* src/include/sys/os7/ddi.h: default to streamscall interface
	* src/include/sys/os7/strconf.h: default to streamscall interface